@@ -1,0 +1,3 @@
+#/bin/sh
+mem=1G
+java -Xmx$mem -server -jar sunflow.jar $*
