@@ -1,4 +1,5 @@
 v0.07.2
+* Added normal smoothing to FileMesh
 * Implemented BVH2 case properly in BoundingIntervalHierarchy (needs benchmarking)
 * Added binary STL format to FileMesh
 * Upgraded to Janino 2.5.4
